--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rxjs-cache-service-client-test",
-  "version": "0.0.0",
+  "name": "rxjs-cache-service-live-demo",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -18,7 +18,7 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
