--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
       "@angular/platform-browser": "^16.1.0",
       "@angular/platform-browser-dynamic": "^16.1.0",
       "@angular/router": "^16.1.0",
+      "@ng-select/ng-select": "^11.2.0",
       "rxjs": "^7.8.1",
-      "rxjs-cache-service": "^1.0.1",
       "tslib": "^2.3.0",
       "zone.js": "~0.13.0"
    },
