--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
       "@angular/platform-browser-dynamic": "^16.1.0",
       "@angular/router": "^16.1.0",
       "@ng-select/ng-select": "^11.2.0",
+      "@vercel/analytics": "^1.1.2",
       "rxjs": "^7.8.1",
       "rxjs-cache-service": "^1.0.5",
       "tslib": "^2.3.0",
