--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "rxjs-cache-service-live-demo",
+   "name": "rxjs-response-cache-live-demo",
    "version": "1.0.0",
    "scripts": {
       "ng": "ng",
@@ -22,7 +22,7 @@
       "@ng-select/ng-select": "^11.2.0",
       "@vercel/analytics": "^1.1.2",
       "rxjs": "^7.8.1",
-      "rxjs-cache-service": "^1.0.7",
+      "rxjs-response-cache": "^1.0.1",
       "tslib": "^2.3.0",
       "zone.js": "~0.13.0"
    },
